--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <p class="quotes__description">
                             การมีความรู้เพียงอย่างเดียวนั้นยังไม่พอ<br>เราต้องรู้จักนำมันออกมาใช้<br>และการมีความตั้งใจ​อย่างเดียวนั้นยังน้อยไป<br>เราต้องรู้จักลงมือทำ<br><br>--Johann
                             Wolfgang von Goethe</p>
-
+                        
                     </div>
 
                     <img src="img/quotes.png" alt="" class="quotes__img">
@@ -531,7 +531,7 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">Contact Me</h1>
-                    <span class="footer__subtitle">Gen in touch</span>
+                    <span class="footer__subtitle">Get in touch</span>
                 </div>
 
                 <div class="footer__links">
