--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
                             <div>
                                 <h1 class="skills__title">Coding Languages</h1>
-                                <span class="skills__subtitle">ภาษาโปรแกรมที่สามารถเขียนได้</span>
+                                <span class="skills__subtitle">ประสบการณ์ภาษาที่เคยใช้เขียนโปรแกรม</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -202,7 +202,7 @@
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">HTML</h3>
-                                    <span class="skills__namber">75%</span>
+                                    <span class="skills__namber">40%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__html"></span>
@@ -212,7 +212,7 @@
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__namber">70%</span>
+                                    <span class="skills__namber">30%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__css"></span>
@@ -222,7 +222,7 @@
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__namber">50%</span>
+                                    <span class="skills__namber">10%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__js"></span>
@@ -232,7 +232,7 @@
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">PHP</h3>
-                                    <span class="skills__namber">65%</span>
+                                    <span class="skills__namber">15%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__php"></span>
@@ -242,7 +242,7 @@
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">Dart (อยู่ระหว่างศึกษา)</h3>
-                                    <span class="skills__namber">15%</span>
+                                    <span class="skills__namber">5%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__dart"></span>
@@ -269,7 +269,7 @@
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">VScode</h3>
-                                    <span class="skills__namber">80%</span>
+                                    <span class="skills__namber">70%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__vscode"></span>
@@ -279,7 +279,7 @@
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">Photoshop</h3>
-                                    <span class="skills__namber">65%</span>
+                                    <span class="skills__namber">25%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__photoshop"></span>
@@ -289,7 +289,7 @@
                             <div class="skills__data">
                                 <div class="skills__title">
                                     <h3 class="skills__name">Flutter (อยู่ระหว่างการศึกษา)</h3>
-                                    <span class="skills__namber">15%</span>
+                                    <span class="skills__namber">5%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__flutter"></span>
