--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <p class="quotes__description">
                             การมีความรู้เพียงอย่างเดียวนั้นยังไม่พอ<br>เราต้องรู้จักนำมันออกมาใช้<br>และการมีความตั้งใจ​อย่างเดียวนั้นยังน้อยไป<br>เราต้องรู้จักลงมือทำ<br><br>--Johann
                             Wolfgang von Goethe</p>
-                        
+
                     </div>
 
                     <img src="img/quotes.png" alt="" class="quotes__img">
@@ -259,7 +259,7 @@
 
                             <div>
                                 <h1 class="skills__title">Tools</h1>
-                                <span class="skills__subtitle">เครื่องมือที่ใช้</span>
+                                <span class="skills__subtitle">ประสบการณ์เครื่องมือที่เคยใช้</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -535,36 +535,39 @@
                 </div>
 
                 <div class="footer__links">
-                    <div class="contact__information">
+                    <a href="tel:0809191449">
+                        <div class="contact__information">
 
-                        <i class="uil uil-phone contact__icon"></i>
+                            <i class="uil uil-phone contact__icon"></i>
+                            <div>
+                                <h3 class="contact__title">Call Me</h3>
+                                <span class="contact__subtitle">080-919-1449</span>
+                            </div>
 
-                        <div>
-                            <h3 class="contact__title">Call Me</h3>
-                            <span class="contact__subtitle">080-919-1449</span>
                         </div>
+                    </a>
+                    <a href="mailto:auoo753421869@gmil.com">
+                        <div class="contact__information">
+                            <i class="uil uil-envelope contact__icon"></i>
 
-                    </div>
-
-                    <div class="contact__information">
-                        <i class="uil uil-envelope contact__icon"></i>
-
-                        <div>
-                            <h3 class="contact__title">Email</h3>
-                            <span class="contact__subtitle">auoo753421869@gmil.com</span>
+                            <div>
+                                <h3 class="contact__title">Email</h3>
+                                <span class="contact__subtitle">auoo753421869@gmil.com</span>
+                            </div>
                         </div>
-                    </div>
+                    </a>
+                    <a href="https://goo.gl/maps/5En8M1bDXJwVdvo69" target="_blank">
+                        <div class="contact__information">
+                            <i class="uil uil-map-marker contact__icon"></i>
 
-                    <div class="contact__information">
-                        <i class="uil uil-map-marker contact__icon"></i>
-
-                        <div>
-                            <h3 class="contact__title">Location</h3>
-                            <span class="contact__subtitle">Thailand Bangkok 1234</span>
+                            <div>
+                                <h3 class="contact__title">Location</h3>
+                                <span class="contact__subtitle">Bangkok - Thailand</span>
+                            </div>
                         </div>
-                    </div>
-
+                    </a>
                 </div>
+
                 <div class="footer__hidden"></div>
                 <div class="footer__socials">
                     <a href="https://www.facebook.com/au.garh/" target="_blank">
