--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <h3 class="home__subtitle">Bachelor of ComSci at BSRU</h3>
                         <!-- typing -->
                         <p class="home__description">
-                            I am a Programmer.
+                            I am a <span>Programmer.</span>
                         </p>
                     </div>
                 </div>
@@ -485,7 +485,8 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">JPSPOS.com</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซค์ขายของให้กับ บริษัท เจพีเอส
+                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซค์ขายของ
+                                และดูแลระบบสินค้าหลังบ้านให้กับ บริษัท เจพีเอส
                                 ครีเอทีฟ อินโนเวชั่น จำกัด ภายใต้บริการของ ShopUp</p>
                             <a href="http://www.jpspos.com/" class="button button--flex button--small portfolio__button"
                                 target="_blank">
@@ -498,6 +499,23 @@
                     <!--==================== Portfolio 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio3.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">VORAPAS.com</h3>
+                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซค์ขายของ
+                                และดูแลระบบสินค้าหลังบ้านให้กับ บริษัท วรพัส กู๊ด ซัพพลาย จำกัด ภายใต้บริการของ ShopUp
+                            </p>
+                            <a href="http://www.vorapas.com/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                เข้าชม
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--==================== Portfolio 4 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/portfolio4.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Best Seller Calculator</h3>
