--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Hi, I'am AuGarh</h1>
+                        <h1 class="home__title">Hi, I'm AuGarh</h1>
                         <h3 class="home__subtitle">Bachelor of ComSci at BSRU</h3>
                         <!-- typing -->
                         <p class="home__description">
@@ -469,7 +469,7 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Login Page</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML และ CSSออกแบบหน้าล็อคอินของเว็บไซค์ โดยที่
+                            <p class="portfolio__description">ใช้ภาษา HTML และ CSSออกแบบหน้าล็อคอินของเว็บไซต์ โดยที่
                                 User interface จะปรับให้เข้ากับอุปกรณ์ทั้งมือถือและคอมพิวเตอร์</p>
                             <a href="https://augarh.github.io/LoginPage/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -485,7 +485,7 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">JPSPOS.com</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซค์ขายของ
+                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซต์ขายของ
                                 และดูแลระบบสินค้าหลังบ้านให้กับ บริษัท เจพีเอส
                                 ครีเอทีฟ อินโนเวชั่น จำกัด ภายใต้บริการของ ShopUp</p>
                             <a href="http://www.jpspos.com/" class="button button--flex button--small portfolio__button"
@@ -502,7 +502,7 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">VORAPAS.com</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซค์ขายของ
+                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซต์ขายของ
                                 และดูแลระบบสินค้าหลังบ้านให้กับ บริษัท วรพัส กู๊ด ซัพพลาย จำกัด ภายใต้บริการของ ShopUp
                             </p>
                             <a href="http://www.vorapas.com/"
@@ -519,7 +519,7 @@
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Best Seller Calculator</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML และ PHP ออกแบบหน้าต่างและระบบคำนวน
+                            <p class="portfolio__description">ใช้ภาษา HTML และ PHP ออกแบบหน้าต่างและระบบคำนวณ
                                 โดยที่โปรแกรมจะแสดงสินค้าที่ขายดีที่สุดจากที่ผู้ใช้ป้อนข้อมูลเข้าไป</p>
                             <a href="https://augarh.github.io/BestSellerProgram/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
