--- a/index.html
+++ b/index.html
@@ -564,13 +564,13 @@
 
                         </div>
                     </a>
-                    <a href="mailto:auoo753421869@gmil.com">
+                    <a href="mailto:au.garh1999@gmil.com">
                         <div class="contact__information">
                             <i class="uil uil-envelope contact__icon"></i>
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">auoo753421869@gmil.com</span>
+                                <span class="contact__subtitle">au.garh1999@gmil.com</span>
                             </div>
                         </div>
                     </a>
