--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         </div>
 
                         <div>
-                            <span class="about__info-title">3.67</span>
+                            <span class="about__info-title">3.71</span>
                             <spen class="about__info-name">เกรดเฉลี่ย <br> GPA</spen>
                         </div>
 
@@ -191,7 +191,7 @@
                             <i class="uil uil-brackets-curly skills__icon"></i>
 
                             <div>
-                                <h1 class="skills__title">Coding Languages</h1>
+                                <h1 class="skills__title">Frequently Used Coding Languages</h1>
                                 <span class="skills__subtitle">ประสบการณ์ภาษาที่เคยใช้เขียนโปรแกรม</span>
                             </div>
 
@@ -258,7 +258,7 @@
                             <i class="uil uil-wrench skills__icon"></i>
 
                             <div>
-                                <h1 class="skills__title">Tools</h1>
+                                <h1 class="skills__title">Frequently Used Tools</h1>
                                 <span class="skills__subtitle">ประสบการณ์เครื่องมือที่เคยใช้</span>
                             </div>
 
