--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
 
                             <div>
                                 <h3 class="background__title">ราชภัฏบ้านสมเด็จเจ้าพระยา</h3>
-                                <span class="background__subtitle">ปี 1 - Now</span>
+                                <span class="background__subtitle">ปี 1 - ปี 4</span>
                                 <div class="background__calender">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2018 - Now
+                                    2018 - 2022
                                 </div>
                             </div>
 
@@ -447,7 +447,28 @@
 
                             <div>
                                 <span class="background__rounder"></span>
+                                <span class="background__line"></span>
                             </div>
+                        </div>
+
+                        <!--==================== Background 4 ====================-->
+                        <div class="background__data">
+                            <div></div>
+
+                            <div>
+                                <span class="background__rounder"></span>
+                            </div>
+
+                            <div>
+                                <h3 class="background__title">FACGURE Co., Ltd</h3>
+                                <span class="background__subtitle">นักศึกษาฝึกงาน<br>ตำแหน่ง Front-end development</span>
+                                <div class="background__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2022
+                                </div>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
@@ -522,6 +543,33 @@
                             <p class="portfolio__description">ใช้ภาษา HTML และ PHP ออกแบบหน้าต่างและระบบคำนวณ
                                 โดยที่โปรแกรมจะแสดงสินค้าที่ขายดีที่สุดจากที่ผู้ใช้ป้อนข้อมูลเข้าไป</p>
                             <a href="https://augarh.github.io/BestSellerProgram/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                เข้าชม
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--==================== Portfolio 5 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/portfolio5.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">PTT OR Backoffice</h3>
+                            <p class="portfolio__description">จัดทำ หน้าเว็บไซต์ตาม UX/UI โดย Flsak Framework
+                                และเชื่อมต่อข้อมูล (API) กับหน้าเว็บไซต์</p>
+                        </div>
+                    </div>
+
+                    <!--==================== Portfolio 6 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/portfolio6.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Best Seller Calculator</h3>
+                            <p class="portfolio__description">ใช้ภาษา HTML และ PHP ออกแบบหน้าต่างและระบบคำนวณ
+                                โดยที่โปรแกรมจะแสดงเวลาว่างที่ตรงกันจากที่ผู้ใช้ทุกคนป้อนข้อมูลเข้าไป</p>
+                            <a href="https://mameet-bsru.herokuapp.com/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
                                 เข้าชม
                                 <i class="uil uil-arrow-right button__icon"></i>
