--- a/index.html
+++ b/index.html
@@ -128,17 +128,17 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        นักศึกษาคนหนึ่งที่อยากพัฒนาความรู้และความสามารถด้านการเขียนโปรแกรมให้มีคุณภาพยิ่งขึ้นไปเรื่อยๆ
+                        ผมคือคนหนึ่งที่อยากพัฒนาความรู้และความสามารถด้านการเขียนโปรแกรมให้มีคุณภาพยิ่งขึ้นไปเรื่อยๆ
                         และสะสมประสบการณ์การทำงานควบคู่กัน</p>
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">22</span>
+                            <span class="about__info-title">23</span>
                             <spen class="about__info-name">อายุ <br> Age</spen>
                         </div>
 
                         <div>
-                            <span class="about__info-title">3.71</span>
+                            <span class="about__info-title">3.74</span>
                             <spen class="about__info-name">เกรดเฉลี่ย <br> GPA</spen>
                         </div>
 
@@ -486,13 +486,13 @@
                 <div class="swiper-wrapper">
                     <!--==================== Portfolio 1 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/portfolio1.jpg" alt="" class="portfolio__img">
+                        <img src="img/portfolio6.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Login Page</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML และ CSSออกแบบหน้าล็อคอินของเว็บไซต์ โดยที่
-                                User interface จะปรับให้เข้ากับอุปกรณ์ทั้งมือถือและคอมพิวเตอร์</p>
-                            <a href="https://augarh.github.io/LoginPage/"
+                            <h3 class="portfolio__title">MaMeet ผู้ช่วยตั้งตึ้ของคุณ</h3>
+                            <p class="portfolio__description">ใช้ภาษา HTML และ PHP ออกแบบหน้าต่างและระบบคำนวณ
+                                โดยที่โปรแกรมจะแสดงเวลาว่างที่ตรงกันจากที่ผู้ใช้ทุกคนที่ป้อนข้อมูลเข้าไป</p>
+                            <a href="https://mameet-bsru.herokuapp.com/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
                                 เข้าชม
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -502,22 +502,32 @@
 
                     <!--==================== Portfolio 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/portfolio2.jpg" alt="" class="portfolio__img">
+                        <img src="img/portfolio5.png" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">JPSPOS.com</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซต์ขายของ
-                                และดูแลระบบสินค้าหลังบ้านให้กับ บริษัท เจพีเอส
-                                ครีเอทีฟ อินโนเวชั่น จำกัด ภายใต้บริการของ ShopUp</p>
-                            <a href="http://www.jpspos.com/" class="button button--flex button--small portfolio__button"
-                                target="_blank">
+                            <h3 class="portfolio__title">PTT OR Backoffice</h3>
+                            <p class="portfolio__description">จัดทำ หน้าเว็บไซต์ตาม UX/UI โดย Flsak Framework
+                                และเชื่อมต่อข้อมูล (API) กับหน้าเว็บไซต์</p>
+                        </div>
+                    </div>
+
+                    <!--==================== Portfolio 3 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/portfolio4.jpg" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Best Seller Calculator</h3>
+                            <p class="portfolio__description">ใช้ภาษา HTML และ PHP ออกแบบหน้าต่างและระบบคำนวณ
+                                โดยที่โปรแกรมจะแสดงสินค้าที่ขายดีที่สุดจากที่ผู้ใช้ป้อนข้อมูลเข้าไป</p>
+                            <a href="https://augarh.github.io/BestSellerProgram/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
                                 เข้าชม
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 3 ====================-->
+                    <!--==================== Portfolio 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio3.jpg" alt="" class="portfolio__img">
 
@@ -534,48 +544,40 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 4 ====================-->
+                    <!--==================== Portfolio 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/portfolio4.jpg" alt="" class="portfolio__img">
+                        <img src="img/portfolio2.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Best Seller Calculator</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML และ PHP ออกแบบหน้าต่างและระบบคำนวณ
-                                โดยที่โปรแกรมจะแสดงสินค้าที่ขายดีที่สุดจากที่ผู้ใช้ป้อนข้อมูลเข้าไป</p>
-                            <a href="https://augarh.github.io/BestSellerProgram/"
-                                class="button button--flex button--small portfolio__button" target="_blank">
+                            <h3 class="portfolio__title">JPSPOS.com</h3>
+                            <p class="portfolio__description">ใช้ภาษา HTML ออกแบบหน้าเว็บไซต์ขายของ
+                                และดูแลระบบสินค้าหลังบ้านให้กับ บริษัท เจพีเอส
+                                ครีเอทีฟ อินโนเวชั่น จำกัด ภายใต้บริการของ ShopUp</p>
+                            <a href="http://www.jpspos.com/" class="button button--flex button--small portfolio__button"
+                                target="_blank">
                                 เข้าชม
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
-                        </div>
-                    </div>
-
-                    <!--==================== Portfolio 5 ====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="img/portfolio5.png" alt="" class="portfolio__img">
-
-                        <div class="portfolio__data">
-                            <h3 class="portfolio__title">PTT OR Backoffice</h3>
-                            <p class="portfolio__description">จัดทำ หน้าเว็บไซต์ตาม UX/UI โดย Flsak Framework
-                                และเชื่อมต่อข้อมูล (API) กับหน้าเว็บไซต์</p>
                         </div>
                     </div>
 
                     <!--==================== Portfolio 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="img/portfolio6.png" alt="" class="portfolio__img">
+                        <img src="img/portfolio1.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Best Seller Calculator</h3>
-                            <p class="portfolio__description">ใช้ภาษา HTML และ PHP ออกแบบหน้าต่างและระบบคำนวณ
-                                โดยที่โปรแกรมจะแสดงเวลาว่างที่ตรงกันจากที่ผู้ใช้ทุกคนป้อนข้อมูลเข้าไป</p>
-                            <a href="https://mameet-bsru.herokuapp.com/"
+                            <h3 class="portfolio__title">Login Page</h3>
+                            <p class="portfolio__description">ใช้ภาษา HTML และ CSSออกแบบหน้าล็อคอินของเว็บไซต์ โดยที่
+                                User interface จะปรับให้เข้ากับอุปกรณ์ทั้งมือถือและคอมพิวเตอร์</p>
+                            <a href="https://augarh.github.io/LoginPage/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
                                 เข้าชม
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
                     </div>
+
+
                 </div>
 
                 <div class="swiper-button-next">
