--- a/index.html
+++ b/index.html
@@ -461,7 +461,8 @@
 
                             <div>
                                 <h3 class="background__title">FACGURE Co., Ltd</h3>
-                                <span class="background__subtitle">นักศึกษาฝึกงาน<br>ตำแหน่ง Front-end development</span>
+                                <span class="background__subtitle">นักศึกษาฝึกงาน<br>ตำแหน่ง Front-end
+                                    development</span>
                                 <div class="background__calender">
                                     <i class="uil uil-calendar-alt"></i>
                                     2022
@@ -484,7 +485,24 @@
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
+
                     <!--==================== Portfolio 1 ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="img/portfolio7.png" alt="" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">ChomCHOB Front-end Quiz</h3>
+                            <p class="portfolio__description">จัดทำ หน้าเว็บไซต์ตาม UX/UI โดย React Framework
+                                และเชื่อมต่อข้อมูล (API) กับหน้าเว็บไซต์</p>
+                            <a href="https://augarh.github.io/ChomCHOB-Front-end-Quiz/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                เข้าชม
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--==================== Portfolio 2 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio6.png" alt="" class="portfolio__img">
 
@@ -500,7 +518,7 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 2 ====================-->
+                    <!--==================== Portfolio 3 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio5.png" alt="" class="portfolio__img">
 
@@ -511,7 +529,7 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 3 ====================-->
+                    <!--==================== Portfolio 4 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio4.jpg" alt="" class="portfolio__img">
 
@@ -527,7 +545,7 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 4 ====================-->
+                    <!--==================== Portfolio 5 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio3.jpg" alt="" class="portfolio__img">
 
@@ -544,7 +562,7 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 5 ====================-->
+                    <!--==================== Portfolio 6 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio2.jpg" alt="" class="portfolio__img">
 
@@ -561,7 +579,7 @@
                         </div>
                     </div>
 
-                    <!--==================== Portfolio 6 ====================-->
+                    <!--==================== Portfolio 7 ====================-->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="img/portfolio1.jpg" alt="" class="portfolio__img">
 
@@ -576,7 +594,6 @@
                             </a>
                         </div>
                     </div>
-
 
                 </div>
 
@@ -614,13 +631,13 @@
 
                         </div>
                     </a>
-                    <a href="mailto:au.garh1999@gmil.com">
+                    <a href="mailto:au.garh1999@gmail.com">
                         <div class="contact__information">
                             <i class="uil uil-envelope contact__icon"></i>
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">au.garh1999@gmil.com</span>
+                                <span class="contact__subtitle">au.garh1999@gmail.com</span>
                             </div>
                         </div>
                     </a>
