feat: add new background data for CONNEX and Thairath Group in index.html

--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
 
                             <div>
                                 <span class="background__rounder"></span>
+                                <span class="background__line"></span>
                             </div>
 
                             <div>
@@ -469,6 +470,43 @@
                                 </div>
                             </div>
 
+                        </div>
+
+                        <!--==================== Background 5 ====================-->
+                        <div class="background__data">
+
+                            <div>
+                                <h3 class="background__title">CONNEX Business Online Co., Ltd</h3>
+                                <span class="background__subtitle">Full Stack Developer</span>
+                                <div class="background__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2023
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="background__rounder"></span>
+                                <span class="background__line"></span>
+                            </div>
+
+                        </div>
+
+                        <!--==================== Background 6 ====================-->
+                        <div class="background__data">
+                            <div></div>
+
+                            <div>
+                                <span class="background__rounder"></span>
+                            </div>
+
+                            <div>
+                                <h3 class="background__title">Thairath Group</h3>
+                                <span class="background__subtitle">Full Stack Developer</span>
+                                <div class="background__calender">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2023 - present
+                                </div>
+                            </div>
 
                         </div>
                     </div>
