Fix typos in HTML and declare variable

--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
                     <div class="about__info">
                         <div>
                             <span class="about__info-title">23</span>
-                            <spen class="about__info-name">อายุ <br> Age</spen>
+                            <span class="about__info-name">อายุ <br> Age</span>
                         </div>
 
                         <div>
                             <span class="about__info-title">3.74</span>
-                            <spen class="about__info-name">เกรดเฉลี่ย <br> GPA</spen>
+                            <span class="about__info-name">เกรดเฉลี่ย <br> GPA</span>
                         </div>
 
                         <div>
                             <span class="about__info-title">4y+</span>
-                            <spen class="about__info-name">ประสบการณ์ทำงาน <br> work experience</spen>
+                            <span class="about__info-name">ประสบการณ์ทำงาน <br> work experience</span>
                         </div>
                     </div>
 
